# DiPH

./: bot.py  bot2.py  pyproject.toml  requirements.txt
diph/config/: __init__.py
